[gd_scene load_steps=5 format=3 uid="uid://ctprjkb4s37j6"]

[ext_resource type="Theme" uid="uid://drka4h4teonns" path="res://gfx/res/theme.tres" id="1_jfvrs"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="2_lb8vg"]
[ext_resource type="Texture2D" uid="uid://dpvpv0cmuopgm" path="res://gfx/bg/battle.png" id="3_m1io8"]

[sub_resource type="LabelSettings" id="LabelSettings_e6lt5"]
font_size = 24

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1_jfvrs")
script = ExtResource("2_lb8vg")

[node name="BG" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -13.0
offset_right = 112.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_m1io8")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -125.0
offset_right = 150.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Grand Strategy"
label_settings = SubResource("LabelSettings_e6lt5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VB" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="Panel/VB"]
custom_minimum_size = Vector2(150, 30)
offset_left = 75.0
offset_top = 20.0
offset_right = 225.0
offset_bottom = 50.0
size_flags_horizontal = 4
text = "Host"

[node name="Spacer1" type="Control" parent="Panel/VB"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 3
anchors_preset = 0
offset_top = 54.0
offset_right = 300.0
offset_bottom = 64.0

[node name="TextEdit" type="LineEdit" parent="Panel/VB"]
custom_minimum_size = Vector2(150, 30)
offset_left = 75.0
offset_top = 68.0
offset_right = 225.0
offset_bottom = 98.0
size_flags_horizontal = 4
text = "127.0.0.1"
placeholder_text = "IP Address"
alignment = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false

[node name="Button2" type="Button" parent="Panel/VB"]
custom_minimum_size = Vector2(150, 30)
offset_left = 75.0
offset_top = 102.0
offset_right = 225.0
offset_bottom = 132.0
size_flags_horizontal = 4
text = "Join"

[node name="Spacer2" type="Control" parent="Panel/VB"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 3
anchors_preset = 0
offset_top = 136.0
offset_right = 300.0
offset_bottom = 146.0

[node name="Button3" type="Button" parent="Panel/VB"]
custom_minimum_size = Vector2(150, 30)
offset_left = 75.0
offset_top = 150.0
offset_right = 225.0
offset_bottom = 180.0
size_flags_horizontal = 4
text = "Exit"

[node name="Lobby" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -125.0
offset_right = 150.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="SC" type="ScrollContainer" parent="Lobby"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="VB" type="VBoxContainer" parent="Lobby/SC"]
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="Lobby"]
custom_minimum_size = Vector2(150, 30)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -30.0
offset_right = 150.0
grow_vertical = 0
size_flags_horizontal = 4
text = "Start"

[node name="Country" type="OptionButton" parent="Lobby"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -151.0
offset_top = -30.0
grow_horizontal = 0
grow_vertical = 0
